--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,63 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap");
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, */
+  /*   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
+  font-family: "Nunito", sans-serif;
+  background-color: #292d3e;
+  color: #a6accd;
 }
 
 * {
   box-sizing: border-box;
 }
+
+a {
+  text-decoration: none;
+  color: #82aaff;
+}
+
+.content {
+  max-width: 65%;
+  margin: 0 auto;
+}
+
+footer {
+  /* background-color: rgba(24, 26, 27, 0.2); */
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  /* display: block; */
+  text-align: center;
+  /* border-top: 1px solid #ddd; */
+}
+
+nav {
+  margin: 10px auto;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  /* border-bottom: 1px solid #ddd; */
+}
+
+nav a {
+  margin-left: 12px;
+  color: #a6accd;
+  font-weight: 700;
+}
+
+.logo {
+  margin-right: auto;
+  align-items: flex-end;
+}
+
+h1 {
+  text-align: center;
+}
+
+/* .logo h1 { */
+/*   text-align: left; */
+/* } */
