--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@ body {
   font-family: "Nunito", sans-serif;
   background-color: #292d3e;
   color: #a6accd;
+  font-size: large;
 }
 
 * {
@@ -36,17 +37,21 @@ footer {
 }
 
 nav {
-  margin: 10px auto;
+  margin: 20px auto 40px auto;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: flex-end;
-  /* border-bottom: 1px solid #ddd; */
 }
 
 nav a {
   margin-left: 12px;
   color: #a6accd;
   font-weight: 700;
+}
+
+nav a:hover {
+  color: #82aaff;
+  border-bottom: 1px #82aaff solid;
 }
 
 .logo {
@@ -58,6 +63,6 @@ h1 {
   text-align: center;
 }
 
-/* .logo h1 { */
-/*   text-align: left; */
-/* } */
+Image {
+  background-color: white;
+}
