fixed footer and removed some global styles

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@ body {
   background-color: #292d3e;
   color: #a6accd;
   font-size: large;
+  min-height: 100vh;
 }
 
 * {
@@ -57,56 +58,4 @@ pre code {
 .mwili {
   max-width: 95%;
   margin: 0 auto;
-}
-.toggle-button {
-  position: absolute;
-  top: 0.75rem;
-  right: 1rem;
-  display: none;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 30px;
-  height: 21px;
-}
-
-.toggle-button .bar {
-  height: 3px;
-  width: 100%;
-  background-color: white;
-}
-
-.navbar-links ul {
-  list-style-type: none;
-}
-
-@media (max-width: 700px) {
-  .logo {
-    /* margin-right: 5px; */
-    max-width: auto;
-    max-height: auto;
-  }
-  .toggle-button {
-    display: flex;
-  }
-  .navbar-links {
-    width: 100%;
-    display: none;
-  }
-  nav {
-    max-width: 95%;
-    margin: 0 auto;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  .navbar-links ul {
-    list-style-type: none;
-    flex-direction: column;
-    width: 100%;
-  }
-  .navbar-links li {
-    text-align: center;
-  }
-  .navbar-links-active {
-    display: flex;
-  }
 }
