--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,77 +1,74 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
 html,
 body {
-  padding: 0;
-  margin: 0;
-  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, */
-  /*   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
-  font-family: "Nunito", sans-serif;
-  background-color: #292d3e;
-  color: #a6accd;
-  position: relative;
+	padding: 0;
+	margin: 0;
+	/* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, */
+	/*   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
+	font-family: 'Nunito', sans-serif;
+	background-color: #222436;
+	color: #96a0c1;
+	position: relative;
+	font-size: large;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 a {
-  text-decoration: none;
-  color: #82aaff;
+	text-decoration: none;
+	color: #82aaff;
 }
 
-/* footer { */
-/*   /1* background-color: rgba(24, 26, 27, 0.2); *1/ */
-/*   position: relative; */
-/*   /1* left: 0; *1/ */
-/*   bottom: 0; */
-/*   width: 100%; */
-/*   text-align: center; */
-/*   /1* border-top: 1px solid #ddd; *1/ */
-/* } */
-
 h1 {
-  text-align: center;
+	text-align: center;
 }
 
 Image {
-  background-color: white;
+	background-color: white;
 }
 
 pre code {
-  background: inherit;
-  border-left: 3px solid grey;
-  page-break-inside: avoid;
-  font-family: monospace;
-  font-size: inherit;
-  line-height: 1.6;
-  margin-bottom: 1.6em;
-  max-width: 100%;
-  overflow: auto;
-  padding: 0.3em 1.5em;
-  display: block;
-  word-wrap: break-word;
+	background: inherit;
+	border-left: 3px solid grey;
+	page-break-inside: avoid;
+	font-family: monospace;
+	/* font-size: inherit; */
+	line-height: 1.6;
+	margin-bottom: 1.6em;
+	max-width: 100%;
+	overflow: auto;
+	padding: 0.3em 1.5em;
+	display: block;
+	word-wrap: break-word;
 }
 
 .blogContent,
 .mwili {
-  max-width: 95%;
-  margin: 0 auto;
-  min-height: 100vh;
-  padding-bottom: 2.5rem;
+	max-width: 95%;
+	margin: 0 auto;
+	min-height: 100vh;
+	padding-bottom: 2.5rem;
 }
 
 .blogContent,
 .mwili a {
-  word-wrap: break-word;
-  font-size: 17px;
+	word-wrap: break-word;
+	font-size: inherit;
 }
 
 .blogContent ul,
 ol {
-  list-style-position: outside;
+	list-style-position: outside;
 }
 
 nav {
-  font-size: large;
+	font-size: large;
+}
+
+blockquote {
+	border-left: 3px solid #82aaff;
+	padding: 0 10px;
+	margin-left: 10px;
 }
