--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,19 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
-html,
+
+* {
+	box-sizing: border-box;
+}
+
+html {
+	background-color: #222436;
+}
 body {
 	padding: 0;
 	margin: 0;
 	/* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, */
 	/*   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
 	font-family: 'Nunito', sans-serif;
-	background-color: #222436;
 	color: #96a0c1;
 	position: relative;
 	font-size: large;
-}
-
-* {
-	box-sizing: border-box;
 }
 
 a {
@@ -71,5 +73,5 @@ blockquote {
 	border-left: 3px solid #c792ea;
 	padding: 0 10px;
 	margin-left: 10px;
-	color: #C792EA;
+	color: #c792ea;
 }
